Fix missing export jlink export in build.gradle
Former-commit-id: 955f264f491fef8545642906535709a770b065bb